Fix for plugins consuming context menu events, bug 118789 r=av, sr=beard